[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-httpauth = "0.8.2"
env_logger = "0.11.6"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"
